# malinrui

./: .envrc  .gitignore  HuffNode.h  TextCompressor.h  draft  flake.nix  main.cpp  pyproject.toml  xor_distance.py  图像压缩ImageCompressor.h  定义ArrayHuffNode  实现HuffTree.h  树逻辑ArrayHuffTree  测试2main.cpp  测试3main.cpp  测试主程序main.cpp
src/: id.py
src/node/: kbucket.py  node.py  node_id.py  node_info.py
src/peer/: peer.py
