[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kad-rs"
version = "0.1.0"
description = "A simple BitTorrent network simulator using Kademlia DHT (K-bucket) algorithm"
requires-python = ">=3.13"

dependencies = [
    "base58>=2.1.1",
    "multiaddr>=0.0.9",
    "multihash>=0.1.1",
    "trio>=0.30.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/peer", "src/node"]

[tool.pyrefly]
project_includes = ["src"]
project_excludes = ["**/.[!/.]*", "**/tests"]
search_path = ["src"]
